--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Hey guys. Let me start by introducing myself. My name is Deepanshu Singh. I completed my high school and intermediate from Dayanand Anglo Vedic Public School. Now, I am pursuing my Bachelor of Technology from Computer Science domain. I am a technology enthusiast and want to learn as many things as possible in my life.</p>
-								<p> I am currently working on my data analysis skills and also focussing on some different areas. 
+								<p> I am currently working on my skills and focussing on some different areas. 
 								I’m excited for the opportunity to be part of a team that's working on some innovative project. I also would like to contribute in your open source project. Although, I am still a learner and begineer, I am trying my best to move forward. By the way, you can also check out my <a href="#work">work</a> here.</p>
 							</article>
 
@@ -57,10 +57,10 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p> Recently, I am mainly focussing on Python programming language. I have worked with many libraries of it like PyPDF, pil, numpy, pandas, matplotlib, etc. I know it may not seem that great but I am improving myself bit by bit everyday and trying different things.</p>
+								<p> Recently, I am mainly focussing on Python programming language. I have worked with many libraries of it like PyPDF, pil, numpy, pandas, matplotlib, flask etc. I know it may not seem that great but I am improving myself bit by bit everyday and trying different things.</p>
 								<p>You can check my github profile for more information about my work.</p>
 								<p>To know a little more <a href="#about">about</a> me.</p>
-								<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/deepu14d" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							</article>
 
 						<!-- About -->
@@ -68,9 +68,10 @@
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p> Hi. I am Deepanshu, you can also call me Deepu. I am a student and currently pursuing my B.Tech degree in CS domain. I am a technology enthusiast and want to learn as many things as possible in my life. </p> 
-								<p>I was also a space enthusiast and really want to know a lot about this world. I mean I can't tell in words how amazing it was to see space documentaries in my late intermediate. But as they say seeing documentaries isn't gonna make you a cosmologist. But I still love reading about things like dark matter, dark energy and many other. It's just that now these things are left behind.</p>
-								<p> I also love watching movies and animes. Drawing anime characters is also one of my hobbies. I also like making Anime Music Videos in my free time and as outdoor activity I like running and playing basketball. </p>
-								<p> I want to do a lot of things. And sometimes fears what if I am unable to do what I really want. A lot of my dreams are already left behind, maybe that's what I decided but now I am working hard to improve myself and achieve things that not just gonna bring happiness to me but can also make others happy and motivated.</p>
+							<!--	<p>I was also a space enthusiast and really want to know a lot about this world. I mean I can't tell in words how amazing it was to see space documentaries in my late intermediate. But as they say seeing documentaries isn't gonna make you a cosmologist. But I still love reading about things like dark matter, dark energy and many other. It's just that now these things are left behind.</p> -->
+								<p> Along with learning new stuff and practicing coding. I also love watching movies and animes. Drawing anime characters is also one of my hobbies. I also like making Anime Music Videos in my free time and as outdoor activity I like running and playing basketball. I am also a space science geek.</p>
+								<p> I want to do a lot of things. And sometimes fears what if I am unable to do what I really want. A lot of my dreams are already left behind, maybe that's what I decided but now I am working hard to improve myself and achieve things that not just gonna bring happiness to me but can also make others happy and motivated.<br>
+								If you want to know more about me then just ask me.</p>
 							</article>
 
 						<!-- Contact -->
@@ -99,8 +100,8 @@
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.instagram.com/deepu__14__/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/deepu14d" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
@@ -164,8 +165,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="https://www.instagram.com/deepu__14__/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://github.com/deepu14ds" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
